k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-microservice
  template:
    metadata:
      labels:
        app: nodejs-microservice
    spec:
      containers:
      - name: nodejs-microservice
        image: <YOUR_DOCKERHUB_USERNAME>/eks-nodejs-microservice:latest
        ports:
        - containerPort: 3000
