k8s/nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-nlb-service
  # Use AWS Network Load Balancer (NLB) for this service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: todo-frontend
