k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-microservice
spec:
  type: LoadBalancer
  selector:
    app: nodejs-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
